Truncate team names on fixture page

--- a/ArticleTemplates/css/scss/templates/_football-fixtures.scss
+++ b/ArticleTemplates/css/scss/templates/_football-fixtures.scss
@@ -27,10 +27,10 @@
 	& > div {
 		display: table-cell;
 		border-top: 1px solid $shadow;
-		.football-col-2, .football-col-4 {
-		white-space: nowrap;
-		overflow: hidden;
-		text-overflow: ellipsis;
+		&.football-col-2, &.football-col-4 {
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 		@include padding(0.25, 0, 1, 0);
 		&.football-col-1, &.football-col-3 {
